force-app/main/default/objects/Roster_Audit_Log__c/Roster_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Roster Audit Log</label>
    <pluralLabel>Roster Audit Logs</pluralLabel>
    <nameField>
        <label>Roster Audit Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>ROSTER-{YYYY}-{MM}{DD}-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Immutable audit record for every Roster File Ingestion run. Created by RosterAuditService on DPE job completion.</description>
</CustomObject>