force-app/main/default/objects/Roster_Audit_Log__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>