force-app/main/default/objects/Roster_Audit_Log__c/fields/CRF_Id__c.field-meta.xml
<CustomField>
    <fullName>CRF_Id__c</fullName>
    <label>Case Related File ID</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>