force-app/main/default/objects/Roster_Audit_Log__c/fields/Ingest_End__c.field-meta.xml
<CustomField>
    <fullName>Ingest_End__c</fullName>
    <label>Ingest End</label>
    <type>DateTime</type>
</CustomField>