force-app/main/default/objects/Roster_Audit_Log__c/fields/Ingest_Start__c.field-meta.xml
<CustomField>
    <fullName>Ingest_Start__c</fullName>
    <label>Ingest Start</label>
    <type>DateTime</type>
</CustomField>