force-app/main/default/objects/Roster_Audit_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>DPE Job ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>