force-app/main/default/objects/Roster_Audit_Log__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Text</type>
    <length>255</length>
</CustomField>