force-app/main/default/objects/Roster_Audit_Log__c/fields/Rows_Added__c.field-meta.xml
<CustomField>
    <fullName>Rows_Added__c</fullName>
    <label>Rows Added</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>