force-app/main/default/objects/Roster_Audit_Log__c/fields/Rows_No_Change__c.field-meta.xml
<CustomField>
    <fullName>Rows_No_Change__c</fullName>
    <label>Rows No Change</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>