force-app/main/default/objects/Roster_Audit_Log__c/fields/Skipped_Rows_Detail__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Rows_Detail__c</fullName>
    <label>Skipped Rows Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON array of skipped rows with row number, column, value, and fix instruction.</description>
</CustomField>