force-app/main/default/objects/Roster_Audit_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Partial Success</fullName><default>false</default><label>Partial Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>