force-app/main/default/objects/Roster_Audit_Log__c/fields/Total_Rows__c.field-meta.xml
<CustomField>
    <fullName>Total_Rows__c</fullName>
    <label>Total Rows</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>