force-app/main/default/objects/Roster_Audit_Log__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <label>Uploaded By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>